Update to fix error found by findbugs